# pdm-script

./: README.md  pyproject.toml
src/pdm_script/: __init__.py
