[project]
name = "pdm-script"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Noam Yorav-Raphael", email = "noam.yoravraphael@mobileye.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
pdm-script = "pdm_script:main"

[tool.pdm]
package-type = "application"
